--- a/res/layout/layout_inner_scenes.xml
+++ b/res/layout/layout_inner_scenes.xml
@@ -9,19 +9,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
   
-  <GridView
-      android:id="@+id/gridViewInner"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
+   <GridView
+      android:id="@+id/gridViewInner" 
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_above="@+id/start_conversation"
       android:layout_margin="5dp"
-      android:columnWidth="100dp"
+      android:columnWidth="90dp"
+      android:verticalSpacing="10dp"
+      android:horizontalSpacing="10dp"
       android:drawSelectorOnTop="true"
-      android:gravity="center"
       android:numColumns="auto_fit"
       android:stretchMode="columnWidth"
-      android:verticalSpacing="5dp" >
-  </GridView>
+      android:gravity="center" />
 
   <Button
       android:id="@+id/button3"
