--- a/res/layout/layout_scenes.xml
+++ b/res/layout/layout_scenes.xml
@@ -11,18 +11,17 @@
   
   <GridView
       android:id="@+id/gridView"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
       android:layout_above="@+id/new_scene_start"
       android:layout_margin="5dp"
-      android:columnWidth="100dp"
+      android:columnWidth="90dp"
       android:drawSelectorOnTop="true"
       android:gravity="center"
+      android:horizontalSpacing="10dp"
       android:numColumns="auto_fit"
       android:stretchMode="columnWidth"
-      android:verticalSpacing="5dp" >
-
-    </GridView>
+      android:verticalSpacing="10dp" />
 
   <Button
       android:id="@+id/new_scene_start"
