--- a/res/layout/layout_scenes.xml
+++ b/res/layout/layout_scenes.xml
@@ -21,6 +21,7 @@
       android:horizontalSpacing="10dp"
       android:numColumns="auto_fit"
       android:stretchMode="columnWidth"
+      android:listSelector="@drawable/grid_color_selector"
       android:verticalSpacing="10dp" />
 
   <Button
@@ -30,6 +31,7 @@
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/gridView"
       android:layout_marginRight="26dp"
+      android:enabled="false"
       android:text="@string/new_scene_start" />
 
   <Button
