--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <string-array name="image_scenario_ids">
-         <item>@drawable/casa</item>
-         <item>@drawable/oficina</item>
-         <item>@drawable/escuela</item>
-         <item>@drawable/colectivo</item>
-         <item>@drawable/nuevo</item>
+         <item name="casa">@drawable/casa</item>
+         <item name="oficina">@drawable/oficina</item>
+         <item name="escuela">@drawable/escuela</item>
+         <item name="colectivo">@drawable/colectivo</item>
+         <item name="nuevo">@drawable/nuevo</item>
     </string-array>
     
     <string-array name="image_house_inner_ids">
