--- a/res/layout/row_grid.xml
+++ b/res/layout/row_grid.xml
@@ -12,7 +12,8 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="100dp"
-        android:layout_height="100dp" >
+        android:layout_height="100dp"
+        android:focusable="false" >
     </ImageView>
 
     <TextView
@@ -21,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="12sp" >
+        android:textSize="12sp"
+        android:focusable="false" >
     </TextView>
 
 </LinearLayout>
