Agregado de seleccion de imagen interna y transparencia

--- a/res/layout/row_grid.xml
+++ b/res/layout/row_grid.xml
@@ -13,7 +13,9 @@
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:focusable="false" >
+        android:focusable="true" 
+        android:scaleType="centerInside"
+    	android:adjustViewBounds="true" >
     </ImageView>
 
     <TextView
