--- a/res/layout/row_grid_inner.xml
+++ b/res/layout/row_grid_inner.xml
@@ -12,7 +12,10 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="100dp"
-        android:layout_height="100dp" >
+        android:layout_height="100dp"
+        android:focusable="true" 
+        android:scaleType="centerInside"
+    	android:adjustViewBounds="true" >
     </ImageView>
 
     <TextView
