--- a/res/layout/layout_inner_scenes.xml
+++ b/res/layout/layout_inner_scenes.xml
@@ -39,6 +39,7 @@
       android:layout_alignParentBottom="true"
       android:layout_alignRight="@+id/gridViewInner"
       android:layout_marginBottom="16dp"
+      android:enabled="false"
       android:text="@string/new_scene_inner_start" />
 
 </RelativeLayout>    
