--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -39,7 +39,7 @@
         android:src="@drawable/abc_spinner_ab_pressed_holo_light" />
 
     <ImageButton
-        android:id="@+id/text"
+        android:id="@+id/textOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/gestureOverlayView1"
