--- a/res/layout/layout_scenes.xml
+++ b/res/layout/layout_scenes.xml
@@ -53,4 +53,8 @@
       android:layout_alignParentLeft="true"
       android:text="@string/new_scene_exit" />
 
+  <fragment android:name="ar.fi.uba.androidtalker.fragment.innerScenariDialogFragment"
+          android:id="@+id/fragment1"
+	      android:layout_width="wrap_content"
+	      android:layout_height="wrap_content" />
 </RelativeLayout>    
