--- a/res/layout/layout_inner_scenes.xml
+++ b/res/layout/layout_inner_scenes.xml
@@ -24,7 +24,7 @@
       android:gravity="center" />
 
   <Button
-      android:id="@+id/button3"
+      android:id="@+id/backGridView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/start_conversation"
