--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -8,7 +8,7 @@
         android:id="@+id/gestureOverlayView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/ImageButton01"
+        android:layout_above="@+id/bottom"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/pencilOption" >
 
