Agregado de imagenes desde el celu en el escenario

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -20,6 +20,7 @@
       	<item name="aulaescuela">@drawable/aulaescuela</item>
         <item name="banioescuela">@drawable/banioescuela</item>
         <item name="patioescuela">@drawable/patioescuela</item>
+        <item name="nueva">@drawable/nueva</item>
     </string-array>
 	
 	 <string-array name="image_ids">
