--- a/res/layout/activity_talker_main.xml
+++ b/res/layout/activity_talker_main.xml
@@ -51,4 +51,13 @@
         android:layout_alignTop="@+id/manner_of_use_button"
         android:text="@string/exit" />
 
+    <ImageView
+        android:id="@+id/app_icon"
+        android:layout_width="155dp"
+        android:layout_height="90dp"
+        android:layout_above="@+id/new_conversation_button"
+        android:layout_marginBottom="14dp"
+        android:layout_toLeftOf="@+id/action_settings_button"
+        android:src="@drawable/app_icon" />
+
 </RelativeLayout>
