--- a/res/layout/activity_talker_main.xml
+++ b/res/layout/activity_talker_main.xml
@@ -8,56 +8,53 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ar.fi.uba.androidtalker.TalkerMainActivity" >
 
-    <Button
-        android:id="@+id/action_settings_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/history_panel_button"
-        android:layout_alignBottom="@+id/history_panel_button"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="54dp"
-        android:text="@string/action_settings" />
-
-    <Button
-        android:id="@+id/manner_of_use_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/history_panel_button"
-        android:layout_marginRight="33dp"
-        android:layout_toLeftOf="@+id/exit_app_button"
-        android:text="@string/manner_of_use" />
+    <ImageView
+        android:id="@+id/app_icon"
+        android:layout_width="155dp"
+        android:layout_height="90dp"
+        android:layout_above="@+id/new_conversation_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="22dp"
+        android:src="@drawable/app_icon" />
 
     <Button
         android:id="@+id/new_conversation_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/app_icon"
         android:layout_centerVertical="true"
         android:text="@string/new_conversation" />
 
     <Button
-        android:id="@+id/history_panel_button"
+        android:id="@+id/manner_of_use_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/manner_of_use_button"
-        android:layout_below="@+id/new_conversation_button"
-        android:text="@string/history_panel" />
+        android:layout_alignRight="@+id/history_panel_button"
+        android:layout_below="@+id/history_panel_button"
+        android:text="@string/manner_of_use" />
 
     <Button
         android:id="@+id/exit_app_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/action_settings_button"
-        android:layout_alignTop="@+id/manner_of_use_button"
+        android:layout_below="@+id/action_settings_button"
         android:text="@string/exit" />
 
-    <ImageView
-        android:id="@+id/app_icon"
-        android:layout_width="155dp"
-        android:layout_height="90dp"
-        android:layout_above="@+id/new_conversation_button"
-        android:layout_marginBottom="14dp"
-        android:layout_toLeftOf="@+id/action_settings_button"
-        android:src="@drawable/app_icon" />
+    <Button
+        android:id="@+id/action_settings_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/new_conversation_button"
+        android:text="@string/action_settings" />
+
+    <Button
+        android:id="@+id/history_panel_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/exit_app_button"
+        android:layout_alignParentLeft="true"
+        android:text="@string/history_panel" />
 
 </RelativeLayout>
