--- a/res/layout/layout_ext_scenes.xml
+++ b/res/layout/layout_ext_scenes.xml
@@ -1,56 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:gravity="top"
+	android:layout_height="match_parent"
+	android:gravity="top"
+	android:background="#000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
-  
-  <GridView
-      android:id="@+id/gridView"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_above="@+id/new_scene_start"
-      android:layout_margin="5dp"
-      android:columnWidth="90dp"
-      android:drawSelectorOnTop="true"
-      android:gravity="center"
-      android:horizontalSpacing="10dp"
-      android:numColumns="auto_fit"
-      android:stretchMode="columnWidth"
-      android:listSelector="@drawable/grid_color_selector"
-      android:verticalSpacing="10dp" />
+    
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/new_scene_start"
+        android:layout_margin="5dp"
+        android:columnWidth="300dp"
+        android:drawSelectorOnTop="true"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:scrollbars="horizontal"
+        android:stretchMode="spacingWidthUniform"
+        android:verticalSpacing="10dp" />
 
-  <Button
-      android:id="@+id/new_scene_start"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentBottom="true"
-      android:layout_alignRight="@+id/gridView"
-      android:layout_marginRight="26dp"
-      android:enabled="false"
-      android:text="@string/new_scene_start" />
+    <ImageButton
+        android:id="@+id/new_scene_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/new_scene_start"
+        android:layout_alignLeft="@+id/gridView"
+        android:layout_below="@+id/gridView"
+        android:background="?android:selectableItemBackground"
+        android:src="@drawable/exit" />
+    
+    <ImageButton
+        android:id="@+id/new_scene_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/gridView"
+        android:background="?android:selectableItemBackground"
+        android:layout_marginBottom="14dp"
+        android:enabled="false"
+        android:src="@drawable/start" />
 
-  <Button
-      android:id="@+id/new_scene_inner"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignBaseline="@+id/new_scene_start"
-      android:layout_alignBottom="@+id/new_scene_start"
-      android:layout_toLeftOf="@+id/new_scene_start"
-      android:enabled="false"
-      android:text="@string/new_scene_inner" />
+    <ImageButton
+        android:id="@+id/new_scene_edit_scenario_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/new_scene_exit"
+        android:layout_centerHorizontal="true"
+        android:background="?android:selectableItemBackground"
+        android:enabled="false"
+        android:src="@drawable/editname" />
 
-  <Button
-      android:id="@+id/new_scene_exit"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignBaseline="@+id/new_scene_inner"
-      android:layout_alignBottom="@+id/new_scene_inner"
-      android:layout_alignParentLeft="true"
-      android:text="@string/new_scene_exit" />
-
-</RelativeLayout>    
+</RelativeLayout>
