--- a/res/layout/row_grid.xml
+++ b/res/layout/row_grid.xml
@@ -11,12 +11,11 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:focusable="true" 
         android:scaleType="centerInside"
-    	android:adjustViewBounds="true" >
-    </ImageView>
+		android:contentDescription="@string/insert_image_accept"/>
 
     <TextView
         android:id="@+id/text"
@@ -24,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="12sp"
+        android:textSize="20sp"
         android:focusable="false" >
     </TextView>
 
