--- a/res/layout/row_grid_inner.xml
+++ b/res/layout/row_grid_inner.xml
@@ -9,14 +9,13 @@
     android:background="@drawable/grid_color_selector"
     android:focusable="true">
 
-    <ImageView
+   <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:focusable="true" 
         android:scaleType="centerInside"
-    	android:adjustViewBounds="true" >
-    </ImageView>
+		android:contentDescription="@string/insert_image_accept"/>
 
     <TextView
         android:id="@+id/text"
@@ -24,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:textSize="12sp" >
+        android:textSize="20sp"
+        android:focusable="false" >
     </TextView>
 
 </LinearLayout>
