--- a/res/layout/layout_ext_scenes.xml
+++ b/res/layout/layout_ext_scenes.xml
@@ -1,51 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="top"
-	android:background="#000"
+    android:layout_height="match_parent"
+    android:background="#000"
+    android:gravity="top"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
-    
-    <GridView
-        android:id="@+id/gridView"
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/new_scene_start"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
-        android:columnWidth="300dp"
-        android:drawSelectorOnTop="true"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:numColumns="3"
-        android:scrollbars="horizontal"
-        android:stretchMode="spacingWidthUniform"
-        android:verticalSpacing="10dp" />
+        android:padding="20dp"  />
+
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/pagerIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:padding="3dp" />
 
     <ImageButton
         android:id="@+id/new_scene_exit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/new_scene_start"
-        android:layout_alignLeft="@+id/gridView"
-        android:layout_below="@+id/gridView"
         android:background="?android:selectableItemBackground"
         android:src="@drawable/exit" />
-    
-    <ImageButton
-        android:id="@+id/new_scene_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/gridView"
-        android:background="?android:selectableItemBackground"
-        android:enabled="false"
-        android:src="@drawable/start" />
 
     <ImageButton
         android:id="@+id/new_scene_edit_scenario_name"
@@ -56,5 +41,15 @@
         android:background="?android:selectableItemBackground"
         android:enabled="false"
         android:src="@drawable/editname" />
+
+    <ImageButton
+        android:id="@+id/new_scene_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/pager"
+        android:layout_alignRight="@+id/pager"
+        android:background="?android:selectableItemBackground"
+        android:enabled="false"
+        android:src="@drawable/start" />
 
 </RelativeLayout>
