--- a/res/layout/view_pager.xml
+++ b/res/layout/view_pager.xml
@@ -9,7 +9,8 @@
       <android.support.v4.view.ViewPager 
            android:id="@+id/pager" 
            android:layout_width="match_parent" 
-           android:layout_height="match_parent" /> 
+           android:layout_height="match_parent" 
+           android:padding="30dp" /> 
 
       <com.viewpagerindicator.CirclePageIndicator 
            android:id="@+id/pagerIndicator" 
