--- a/res/layout/activity_talker_main.xml
+++ b/res/layout/activity_talker_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ar.fi.uba.androidtalker.TalkerMainActivity" >
+    tools:context="ar.uba.fi.talker.TalkerMainActivity" >
 
     <ImageView
         android:id="@+id/app_icon"
