--- a/res/menu/scenes.xml
+++ b/res/menu/scenes.xml
@@ -2,7 +2,7 @@
 <menu  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ar.fi.uba.androidtalker.NewSceneActivity" >
+    tools:context="ar.uba.fi.talker.NewSceneActivity" >
 
 
 </menu>
