--- a/res/menu/settings.xml
+++ b/res/menu/settings.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ar.fi.uba.androidtalker.SettingsActivity" >
+    tools:context="ar.uba.fi.talker.SettingsActivity" >
 
 </menu>
