--- a/res/menu/talker_main.xml
+++ b/res/menu/talker_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ar.fi.uba.androidtalker.TalkerMainActivity" >
+    tools:context="ar.uba.fi.talker.TalkerMainActivity" >
 
     <item
         android:id="@+id/action_settings"
