--- a/res/layout/layout_ext_scenes.xml
+++ b/res/layout/layout_ext_scenes.xml
@@ -22,8 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="3dp" />
+        android:layout_marginTop="5dp" />
 
     <ImageButton
         android:id="@+id/new_scene_start"
