--- a/res/layout/row_grid.xml
+++ b/res/layout/row_grid.xml
@@ -7,7 +7,8 @@
     android:padding="5dp" 
     android:clickable="true"
     android:background="@drawable/grid_color_selector"
-    android:focusable="true">
+    android:focusable="true"
+    android:id="@+id/grid_element">
 
     <ImageView
         android:id="@+id/image"
