--- a/res/layout/layout_ext_scenes.xml
+++ b/res/layout/layout_ext_scenes.xml
@@ -40,6 +40,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignBottom="@+id/pager"
+		android:layout_marginLeft="27dp"
         android:layout_toRightOf="@+id/new_scene_gallery"
         android:enabled="false"
         android:src="@drawable/editname"
@@ -61,6 +62,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignBottom="@+id/pager"
+		android:layout_marginLeft="36dp"
         android:layout_toRightOf="@+id/new_scene_edit_scenario_name"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
