Inserto imagen desde Categoría.

--- a/res/layout/insert_image_gridview.xml
+++ b/res/layout/insert_image_gridview.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/insert_image_gridview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:columnWidth="100dp"
-    android:gravity="center"
-    android:numColumns="auto_fit"
-    android:stretchMode="columnWidth" >
-
-</GridView>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    
+    <ViewFlipper
+        android:id="@+id/vfImages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" 
+        android:animateLayoutChanges="true">
+        <GridView
+            android:id="@+id/insert_cat_gridview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="100dp"
+            android:gravity="center"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth" >
+        </GridView>
+        <GridView
+            android:id="@+id/insert_image_gridview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:columnWidth="100dp"
+            android:gravity="center"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth" >
+        </GridView>
+    </ViewFlipper>
+</FrameLayout>
