--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="blue">#00abea</color>
     <color name="white">#ffffff</color>
+    <color name="dkgrey">#ff444444</color>
     
 </resources>
