--- a/res/layout/layout_ext_scenes.xml
+++ b/res/layout/layout_ext_scenes.xml
@@ -13,16 +13,14 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"  />
+        android:layout_height="match_parent" />
 
     <com.viewpagerindicator.CirclePageIndicator
         android:id="@+id/pagerIndicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
-        android:padding="3dp" />
+        android:layout_marginTop="5dp" />
 
     <ImageButton
         android:id="@+id/new_scene_exit"
