--- a/res/layout/calculator.xml
+++ b/res/layout/calculator.xml
@@ -28,14 +28,14 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button_open"
+            android:id="@+id/buttonOpen"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/calc_open" />
         
         <Button
-            android:id="@+id/button_close"
+            android:id="@+id/buttonClose"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
