[MISC] Agregado de imágenes default y textos default de prueba para testeo en categoría/imágenes

--- a/res/layout/insert_image_grid_item.xml
+++ b/res/layout/insert_image_grid_item.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/grid_element"
+    android:id="@+id/insert_image_grid_element"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
