--- a/res/layout/canvas_default.xml
+++ b/res/layout/canvas_default.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:id="@+id/canvas_default"
-    android:saveEnabled="true" 
-    android:keepScreenOn="true">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:keepScreenOn="true"
+    android:saveEnabled="true" >
 
     <ar.uba.fi.talker.view.Scenario
         android:id="@+id/gestureOverlayView1"
@@ -117,5 +117,16 @@
         android:scaleType="fitCenter"
         android:src="@drawable/image_icon"
         android:contentDescription="@string/insert_image_accept" />
+
+    <ImageButton
+        android:id="@+id/saveAll"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/gestureOverlayView1"
+        android:layout_toLeftOf="@+id/eraseAllOption"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/new_conversation"
+        android:scaleType="fitCenter"
+        android:src="@drawable/save_all" />
 
 </RelativeLayout>
